--- a/core/templates/includes/footer.html
+++ b/core/templates/includes/footer.html
@@ -1,7 +1,7 @@
 {% load static from staticfiles %}
 <div class="f_container">
     <div class="f_inner_top">
-        <h3>Stay Connected with the Library <span><a href="http://www.loc.gov/homepage/connect.html">All ways to connect</a></span></h3>
+        <h3>Stay Connected with the Library <span><a href="https://www.loc.gov/homepage/connect.html">All ways to connect</a></span></h3>
     </div><!-- end class:f_inner_top -->
     <div class="f_inner_mid">
         <div class="find_us">
@@ -11,20 +11,20 @@
         </div>
         <div class="subscribe">
             <h4>Subscribe &amp; Comment</h4>
-            <span><a href="http://www.loc.gov/rss/">RSS &amp; E-Mail</a></span>
+            <span><a href="https://www.loc.gov/rss/">RSS &amp; E-Mail</a></span>
             <span><a href="http://blogs.loc.gov/loc/">Blogs</a></span>
         </div>
 
         <div class="download">
             <h4>Download &amp; Play</h4>
-            <span><a href="http://www.loc.gov/podcasts/">Podcasts</a></span>
-            <span><a href="http://www.loc.gov/webcasts/">Webcasts</a></span>
+            <span><a href="https://www.loc.gov/podcasts/">Podcasts</a></span>
+            <span><a href="https://www.loc.gov/webcasts/">Webcasts</a></span>
             <span class="external"><a href="http://deimos3.apple.com/WebObjects/Core.woa/Browse/loc.gov">iTunes U</a></span>
         </div>
-        
+
     </div><!-- end class:f_inner_mid -->
     <div class="f_inner_bot">
-        <div class="sitelinks"><a href="http://www.loc.gov/about/">About</a>&nbsp;|&nbsp;<a href="http://www.loc.gov/pressroom/">Press</a>&nbsp;|&nbsp;<a href="http://www.loc.gov/about/sitemap/">Site Map</a>&nbsp;|&nbsp;<a href="http://www.loc.gov/help/contact-general.html">Contact</a>&nbsp;|&nbsp;<a href="http://www.loc.gov/access/">Accessibility</a>&nbsp;|&nbsp;<a href="http://www.loc.gov/homepage/disclaim.html">Legal</a>&nbsp;|&nbsp;<a href="http://www.loc.gov/global/disclaim.html">External Link Disclaimer</a>&nbsp;|&nbsp;<a href="http://www.usa.gov/">USA.gov</a></div>
-        <div class="speech"><a href="http://www.loc.gov/access/web.html">Speech Enabled</a></div>
+        <div class="sitelinks"><a href="https://www.loc.gov/about/">About</a>&nbsp;|&nbsp;<a href="https://www.loc.gov/pressroom/">Press</a>&nbsp;|&nbsp;<a href="https://www.loc.gov/about/sitemap/">Site Map</a>&nbsp;|&nbsp;<a href="https://www.loc.gov/help/contact-general.html">Contact</a>&nbsp;|&nbsp;<a href="https://www.loc.gov/access/">Accessibility</a>&nbsp;|&nbsp;<a href="https://www.loc.gov/homepage/disclaim.html">Legal</a>&nbsp;|&nbsp;<a href="https://www.loc.gov/global/disclaim.html">External Link Disclaimer</a>&nbsp;|&nbsp;<a href="http://www.usa.gov/">USA.gov</a></div>
+        <div class="speech"><a href="https://www.loc.gov/access/web.html">Speech Enabled</a></div>
     </div><!-- end class:f_inner_bot -->
 </div><!-- end class:f_container -->
