--- a/core/templates/reports/terms.html
+++ b/core/templates/reports/terms.html
@@ -19,14 +19,14 @@
         <h1>National Digital Newspaper Program Vocabulary</h1>
 
         <p>
-        To support RDF views for resources in 
+        To support RDF views for resources in
         <a href="http://chroniclingamerica.loc.gov">Chronicling America</a>
-        a few vocabulary elements needed to be created when suitable terms 
-        couldn't be found elsewhere. This page is not an exhaustive list of 
-        vocabulary terms in use in Chronicling America linked data views, but 
-        is simply a list of those classes and properties that have been 
+        a few vocabulary elements needed to be created when suitable terms
+        couldn't be found elsewhere. This page is not an exhaustive list of
+        vocabulary terms in use in Chronicling America linked data views, but
+        is simply a list of those classes and properties that have been
         created by the Library of Congress to support Chronicling America and
-        the <a href="http://www.loc.gov/ndnp/">National Digital Newspaper Project</a> more generally.
+        the <a href="https://www.loc.gov/ndnp/">National Digital Newspaper Project</a> more generally.
         </p>
 
         <table cellspacing="0" class="table table-striped table-hover" about="[ndnp:Awardee]">
