--- a/loc/templates/base.html
+++ b/loc/templates/base.html
@@ -13,7 +13,7 @@
     <link title="NDNP Title Search" href="{% url 'chronam_search_titles_opensearch' %}"
           rel="search" type="application/opensearchdescription+xml" />
     <link rel="alternate" type="application/rss+xml" title="News about Chronicling America - RSS Feed"
-          href="http://www.loc.gov/rss/ndnp/ndnp.xml" />
+          href="https://www.loc.gov/rss/ndnp/ndnp.xml" />
     <meta http-equiv="Content-Language" content="en-us" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="dc.title" content="Chronicling America | Library of Congress" />
@@ -66,7 +66,7 @@
                   title: '{{ page_title }}',
                   download_links: [
                   {
-                   link: 'http://www.loc.gov/rss/ndnp/ndnp.xml',
+                   link: 'https://www.loc.gov/rss/ndnp/ndnp.xml',
                    label: 'application/rss+xml',
                    meta: 'News about Chronicling America - RSS Feed',
                   },
