--- a/core/templates/includes/disclaimer.html
+++ b/core/templates/includes/disclaimer.html
@@ -1,4 +1,4 @@
 {% load static from staticfiles %}
 <div class="disclaimer">
-<a href="http://www.loc.gov/global/disclaim.html" alt="External link disclaimer"> <img src="{% static 'images/external-link-disclaimer.gif' %}" /></a> 
+<a href="https://www.loc.gov/global/disclaim.html" alt="External link disclaimer"> <img src="{% static 'images/external-link-disclaimer.gif' %}" /></a>
 </div>
