--- a/core/templates/includes/lc_metadata.html
+++ b/core/templates/includes/lc_metadata.html
@@ -10,10 +10,10 @@
         <meta name="DC.identifier" content="urn:issn:{{ title.issn }}" />
         <meta name="DC.type" content="text" />
         {% for s in title.subjects.all %}<meta name="DC.subject" content="{{ s.heading }}" />
-        {% endfor %} 
+        {% endfor %}
         {% for l in title.languages.all %}<meta name="DC.language" content="{{ l.code }}" />
         {% endfor %}
-        <link title="MODS Metadata Schema" rel="schema.mods" href="http://www.loc.gov/standards/mods/mods.xsd" />
+        <link title="MODS Metadata Schema" rel="schema.mods" href="https://www.loc.gov/standards/mods/mods.xsd" />
         <meta name="mods.title" content="{{ title.display_name }}" />
         <meta name="mods.place" content="{{ title.place_of_publication }}" />
         {% for p in title.places.all %}<meta name="mods.place" content="{{ p.name }}" />{% endfor %}
