--- a/core/templates/reports/awardees.html
+++ b/core/templates/reports/awardees.html
@@ -4,8 +4,8 @@
 {% block subcontent %}
 
 <p>
-Below is a list of NDNP Awardees that have content in the Chronicling 
-America Web Application. Clicking on the name will bring you to a 
+Below is a list of NDNP Awardees that have content in the Chronicling
+America Web Application. Clicking on the name will bring you to a
 detail page for the awardee, and clicking on the organization code will
 perform a search of the MARC Organization database.
 </p>
@@ -20,14 +20,14 @@ perform a search of the MARC Organization database.
 
 {% for awardee in awardees %}
 
-  <tr class="{% cycle 'lightGray' 'white' %}"> 
+  <tr class="{% cycle 'lightGray' 'white' %}">
       <td>
           <a href="{% url 'chronam_awardee' awardee.org_code %}">
               {{ awardee.name }}
           </a>
       </td>
       <td>
-          <a href="http://www.loc.gov/marc/organizations/org-search.php?code_keyword={{ awardee.org_code }}&amp;SearchType=MARC%20ORG%20CODE&amp;submit=Search">
+          <a href="https://www.loc.gov/marc/organizations/org-search.php?code_keyword={{ awardee.org_code }}&amp;SearchType=MARC%20ORG%20CODE&amp;submit=Search">
               {{ awardee.org_code }}
           </a>
       </td>
