--- a/core/templates/reports/batches.html
+++ b/core/templates/reports/batches.html
@@ -4,23 +4,23 @@
 {% block extra_link_types %}
 <link rel="alternate" type="application/atom+xml" href="{% url 'chronam_batches_atom' %}" title="Batches Atom Feed" />
 <link rel="alternate" type="application/json" href="{% url 'chronam_batches_json'%}" title="Batches JSON Feed" />
-    
+
 {% endblock %}
 
 {% block subcontent %}
 
 <p>
-The Library of Congress regularly receives digitized newspaper content 
+The Library of Congress regularly receives digitized newspaper content
 from <a href="{% url 'chronam_awardees' %}">grant awardees</a> in the <a
-    href="http://www.loc.gov/ndnp/">National Digital Newspaper Program</a>.
+    href="https://www.loc.gov/ndnp/">National Digital Newspaper Program</a>.
 Content is delivered in the form of batches, where each batch can contain
 one or more issues, from one or more newspapers. As batches are loaded into
-Chronicling America they will appear here. More details about the 
+Chronicling America they will appear here. More details about the
 batch can be discovered by clicking on the batch name link.
 </p>
 
 <p>
-If you are interested in automated access to this data you may be interested 
+If you are interested in automated access to this data you may be interested
 in the <a href="{% url 'chronam_batches_atom' %}">Atom</a> and
 <a href="{% url 'chronam_batches_json' %}">JSON</a> versions of this table.
 </p>
@@ -28,7 +28,7 @@ in the <a href="{% url 'chronam_batches_atom' %}">Atom</a> and
   {% ifnotequal paginator.num_pages 1 %}
   <div id="searchnav">
       <div class="pageNavigator">
-      Pages: 
+      Pages:
       {% if page.has_previous %}
       <a rel="prev" href="{% url 'chronam_batches_page' page.previous_page_number %}"><img src="{% static 'images/pag_prev_on.gif' %}" alt="prev" width="13" height="13" /></a>
       {% endif %}
@@ -38,15 +38,15 @@ in the <a href="{% url 'chronam_batches_atom' %}">Atom</a> and
       {% else %}
 
       {% ifequal page_number page.number %}
-      <span class="off">{{page_number}}</span> 
+      <span class="off">{{page_number}}</span>
       {% else %}
-      <a href="{% url 'chronam_batches_page' page_number %}">{{ page_number }}</a> 
+      <a href="{% url 'chronam_batches_page' page_number %}">{{ page_number }}</a>
       {% endifequal %}
 
       {% endifequal %}
       {% endfor %}
       {% if page.has_next %}
-      <a rel="next" href="{% url 'chronam_batches_page' page.next_page_number %}"><img src="{% static 'images/pag_next_on.gif' %}" alt="next" width="13" height="13" /></a> 
+      <a rel="next" href="{% url 'chronam_batches_page' page.next_page_number %}"><img src="{% static 'images/pag_next_on.gif' %}" alt="next" width="13" height="13" /></a>
       {% endif %}
     </div>
   </div>
