--- a/core/templates/about_api.html
+++ b/core/templates/about_api.html
@@ -27,7 +27,7 @@ different links take you to get started.  When describing Chronicling America as
 
 <p>For more information about the open source Chronicling America software
 please see the <a href="https://github.com/LibraryofCongress/chronam">LibraryOfCongress/chronam</a> GitHub site.
-Also, please consider subscribing to the <a href="http://listserv.loc.gov/archives/chronam-users.html">ChronAm-Users</a> discussion list
+Also, please consider subscribing to the <a href="https://listserv.loc.gov/archives/chronam-users.html">ChronAm-Users</a> discussion list
 if you want to discuss how to use or extend the software or data from its
 APIs.</p>
 
