--- a/core/templates/help.html
+++ b/core/templates/help.html
@@ -49,11 +49,11 @@ CONSER/WorldCat records.</p>
 
 <h4>How do I cite or reference newspaper Directory records and pages for re-use (e.g., in a Web site or other electronic display) or reference (e.g., in a bibliography or journal article) external to <i>Chronicling America</i>?</h4>
 <p><i>Chronicling America</i> supports persistent links to newspaper Directory records and pages by providing a predictable URL, displayed in the descriptive information for that object. Using the proposed <a href="http://bitworking.org/projects/URI-Templates/draft-gregorio-uritemplate-00.html" onmouseup="return linkDisclaimer.rewriteAnchor(this);" shape="rect">URI Template</a> syntax the links will use the pattern:   </p>
-<ul><li>http://chroniclingamerica.loc.gov/lccn/{lccn}/{date}/ed-{edition}/seq-{image sequence}</li></ul>
+<ul><li>https://chroniclingamerica.loc.gov/lccn/{lccn}/{date}/ed-{edition}/seq-{image sequence}</li></ul>
 <p>Where:</p>
 <ul><li><i>lccn</i> is the # Library of Congress Control Number for the newspaper</li><li><i>date</i> is the date of the issue, specified as yyyy-mm-dd (e.g. 1902-01-30)</li><li><i>edition</i> is the edition number for that date (e.g. 1)</li><li><i>seq</i> is the image sequence number (e.g. 23) for that issue.</li></ul>
 <p>For example:</p>
-<ul><li>http://chroniclingamerica.loc.gov/lccn/sn84026749/1903-01-08/ed-1/seq-2</li></ul>
+<ul><li>https://chroniclingamerica.loc.gov/lccn/sn84026749/1903-01-08/ed-1/seq-2</li></ul>
 <p>When describing <i>Chronicling America</i> as the source of content, please use the URL and a Web site citation, such as &quot;from the Library of Congress, <i>Chronicling America</i>: Historic American Newspapers site&quot;.</p>
 <br />
 
@@ -66,7 +66,7 @@ CONSER/WorldCat records.</p>
         <td rowspan="1" colspan="1">PDF <br/>(Portable Document Format, .pdf)</td>
         <td rowspan="1" colspan="1">Used for page images</td>
         <td rowspan="1" colspan="1"><a href="http://www.adobe.com/products/acrobat/readstep2.html" onmouseup="return linkDisclaimer.rewriteAnchor(this);" shape="rect"> Adobe Acrobat Reader</a><br/><br/><a href="http://www.adobe.com/products/acrobat/alternate.html" onmouseup="return linkDisclaimer.rewriteAnchor(this);" shape="rect"> Adobe text-only download page</a></td>
-        <td rowspan="1" colspan="1">- <a href="http://chroniclingamerica.loc.gov/lccn/sn84024441/1901-12-16/ed-1/seq-1.pdf" shape="rect">Sample PDF</a><br/>- <a href="http://chroniclingamerica.loc.gov/lccn/sn84024441/1901-12-16/ed-1/seq-1" shape="rect">About this sample</a></td></tr>
+        <td rowspan="1" colspan="1">- <a href="https://chroniclingamerica.loc.gov/lccn/sn84024441/1901-12-16/ed-1/seq-1.pdf" shape="rect">Sample PDF</a><br/>- <a href="https://chroniclingamerica.loc.gov/lccn/sn84024441/1901-12-16/ed-1/seq-1" shape="rect">About this sample</a></td></tr>
     <tr>
         <td rowspan="1" colspan="1">JPEG2000<br/>(.jp2)</td>
         <td rowspan="1" colspan="1">
@@ -78,8 +78,8 @@ CONSER/WorldCat records.</p>
             - <a href="http://www.kakadusoftware.com" onmouseup="return linkDisclaimer.rewriteAnchor(this);" shape="rect">Kdu_show</a><br/>
             - <a href="http://www.irfanview.com" onmouseup="return linkDisclaimer.rewriteAnchor(this);" shape="rect">IrfanView with JPEG2000 plug-in</a><br/><br/>OS X:Preview supports baseline JP2 only; commercial software may be needed to view tiled JP2 files, such as those in <i>Chronicling America</i>.</td>
         <td rowspan="1" colspan="1">
-            - <a href="http://chroniclingamerica.loc.gov/lccn/sn84024441/1901-12-16/ed-1/seq-1.jp2" shape="rect">Sample JPEG2000 page</a><br/>
-            - <a href="http://chroniclingamerica.loc.gov/lccn/sn84024441/1901-12-16/ed-1/seq-1" shape="rect">About this sample</a></td>
+            - <a href="https://chroniclingamerica.loc.gov/lccn/sn84024441/1901-12-16/ed-1/seq-1.jp2" shape="rect">Sample JPEG2000 page</a><br/>
+            - <a href="https://chroniclingamerica.loc.gov/lccn/sn84024441/1901-12-16/ed-1/seq-1" shape="rect">About this sample</a></td>
     </tr>
 </table>
 <p>Some Web browsers incorrectly assume that Quicktime (automatically included with the browser software) can display a JPEG2000 image (JPEG2000, or .jp2, is not a &quot;native&quot; Web format.) To counteract this effect, download the JPEG2000 (JP2) image by &quot;right-click*quot;-ing with the mouse on the image link --e.g., &quot;JP2 (4.0 Mb)&quot;. In the dialog box that appears, you will see &quot;Save Link As...&quot; or &quot;Save Target As...&quot; (depending on the Web browser used). Selecting this option will result in downloading the image to your desktop for further review.</p>
@@ -176,7 +176,7 @@ CONSER/WorldCat records.</p>
             <li>Not digitized, not published</li>
             <li>Not digitized, publishing unknown</li>
         </ul>
-        <p>A good and historically significant example of missing issues is in the <i>San Francisco Call</i>, where the April 19th and April 20th issues from 1906 are missing due to the devastating San Francisco earthquake that prevented the newspaper from publishing on those days.  In this example, the &quot;not digitized, not published&quot; indicator displays as such: <a href="http://chroniclingamerica.loc.gov/lccn/sn85066387/1906-04-19/ed-1/">http://chroniclingamerica.loc.gov/lccn/sn85066387/1906-04-19/ed-1/</a>.</p>
+        <p>A good and historically significant example of missing issues is in the <i>San Francisco Call</i>, where the April 19th and April 20th issues from 1906 are missing due to the devastating San Francisco earthquake that prevented the newspaper from publishing on those days.  In this example, the &quot;not digitized, not published&quot; indicator displays as such: <a href="https://chroniclingamerica.loc.gov/lccn/sn85066387/1906-04-19/ed-1/">https://chroniclingamerica.loc.gov/lccn/sn85066387/1906-04-19/ed-1/</a>.</p>
     </li>
     <li>If you have any questions about this information or any other aspects of  <i>Chronicling America</i>, contact the Newspaper and Current Periodicals Reading room via LC&#39;s &quot;Ask a Librarian&quot; service, https://www.loc.gov/rr/askalib/ask-news.html.</li>
 </ul>
