--- a/core/templates/reports/ocr.html
+++ b/core/templates/reports/ocr.html
@@ -16,14 +16,14 @@
 <h3>What is OCR?</h3>
 
 <p>
-Optical character recognition (OCR) is a fully automated process 
-that converts the visual image of numbers and letters into 
-computer-readable numbers and letters. Computer software can then 
-search the OCR-generated text for words, phrases, numbers, or other 
-characters. However, OCR is not 100 percent accurate, and, 
-particularly if the original item has extraneous markings on the 
-page, unusual text styles, or very small fonts, the searchable text 
-OCR generates will contain errors that cannot be corrected by 
+Optical character recognition (OCR) is a fully automated process
+that converts the visual image of numbers and letters into
+computer-readable numbers and letters. Computer software can then
+search the OCR-generated text for words, phrases, numbers, or other
+characters. However, OCR is not 100 percent accurate, and,
+particularly if the original item has extraneous markings on the
+page, unusual text styles, or very small fonts, the searchable text
+OCR generates will contain errors that cannot be corrected by
 automated means.
 </p>
 
@@ -37,17 +37,17 @@ instance, the passage will still be found in a full-text search.
 </p>
 
 <p>
-To enable research and external services Chronicling America provides bulk 
-access to its OCR data. The table below itemizes a list of data files 
-available for download. Each file will decompress into directory structure that 
+To enable research and external services Chronicling America provides bulk
+access to its OCR data. The table below itemizes a list of data files
+available for download. Each file will decompress into directory structure that
 lets you easily map the OCR file to the URL identifier for that page. For
 example a file such as <code>sn830030214/1903/05/01/ed-1/seq-1/ocr.txt</code>
 maps to the URL
-<code>http://chroniclingamerica.loc.gov/lccn/sn830030214/1903-05-01/ed-1/seq-1/</code>.
+<code>https://chroniclingamerica.loc.gov/lccn/sn830030214/1903-05-01/ed-1/seq-1/</code>.
 </p>
 
 <p>
-If you are interested in automated access to this data you may want to use the 
+If you are interested in automated access to this data you may want to use the
 <a href="{% url 'chronam_ocr_atom' %}">Atom</a> and
 <a href="{% url 'chronam_ocr_json' %}">JSON</a> versions of this table.
 </p>
