--- a/core/templates/reports/terms.html
+++ b/core/templates/reports/terms.html
@@ -7,7 +7,7 @@
     xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#"
     xmlns:dcterms="http://purl.org/dc/terms/"
     xmlns:foaf="http://xmlns.com/foaf/0.1/"
-    xmlns:ndnp="http://chroniclingamerica.loc.gov/terms#">
+    xmlns:ndnp="https://chroniclingamerica.loc.gov/terms#">
 
     <head>
         <title>National Digital Newspaper Program Vocabulary</title>
@@ -20,7 +20,7 @@
 
         <p>
         To support RDF views for resources in
-        <a href="http://chroniclingamerica.loc.gov">Chronicling America</a>
+        <a href="https://chroniclingamerica.loc.gov">Chronicling America</a>
         a few vocabulary elements needed to be created when suitable terms
         couldn't be found elsewhere. This page is not an exhaustive list of
         vocabulary terms in use in Chronicling America linked data views, but
@@ -35,7 +35,7 @@
             </tr>
             <tr>
                 <td class="name">URI:</td>
-                <td>http://chroniclingamerica.loc.gov/terms#Awardee</td>
+                <td>https://chroniclingamerica.loc.gov/terms#Awardee</td>
             </tr>
             <tr>
                 <td class="name">Label:</td>
@@ -61,7 +61,7 @@
             </tr>
             <tr>
                 <td class="name">URI:</td>
-                <td>http://chroniclingamerica.loc.gov/terms#Batch</td>
+                <td>https://chroniclingamerica.loc.gov/terms#Batch</td>
             </tr>
             <tr>
                 <td class="name">Label:</td>
@@ -83,7 +83,7 @@
             </tr>
             <tr>
                 <td class="name">URI:</td>
-                <td>http://chroniclingamerica.loc.gov/terms#Page</td>
+                <td>https://chroniclingamerica.loc.gov/terms#Page</td>
             </tr>
             <tr>
                 <td class="name">Label:</td>
@@ -105,7 +105,7 @@
             </tr>
             <tr>
                 <td class="name">URI:</td>
-                <td>http://chroniclingamerica.loc.gov/terms#Essay</td>
+                <td>https://chroniclingamerica.loc.gov/terms#Essay</td>
             </tr>
             <tr>
                 <td class="name">Label:</td>
@@ -131,7 +131,7 @@
             </tr>
             <tr>
                 <td class="name">URI:</td>
-                <td>http://chroniclingamerica.loc.gov/terms#bag</td>
+                <td>https://chroniclingamerica.loc.gov/terms#bag</td>
             </tr>
             <tr>
                 <td class="name">Label:</td>
@@ -154,7 +154,7 @@
             </tr>
             <tr>
                 <td class="name">URI:</td>
-                <td>http://chroniclingamerica.loc.gov/terms#sequence</td>
+                <td>https://chroniclingamerica.loc.gov/terms#sequence</td>
             </tr>
             <tr>
                 <td class="name">Label:</td>
@@ -177,7 +177,7 @@
             </tr>
             <tr>
                 <td class="name">URI:</td>
-                <td>http://chroniclingamerica.loc.gov/terms#number</td>
+                <td>https://chroniclingamerica.loc.gov/terms#number</td>
             </tr>
             <tr>
                 <td class="name">Label:</td>
@@ -200,7 +200,7 @@
             </tr>
             <tr>
                 <td class="name">URI:</td>
-                <td>http://chroniclingamerica.loc.gov/terms#section</td>
+                <td>https://chroniclingamerica.loc.gov/terms#section</td>
             </tr>
             <tr>
                 <td class="name">Label:</td>
