--- a/loc/templates/page.html
+++ b/loc/templates/page.html
@@ -40,7 +40,7 @@
     <link rel="alternate" type="application/pdf" href="{% url 'chronam_page_pdf' title.lccn issue.date_issued issue.edition page.sequence %}" />
     <link rel="alternate" type="application/xml" href="{% url 'chronam_page_ocr_xml' title.lccn issue.date_issued issue.edition page.sequence %}" />
     <link rel="alternate" type="text/plain" href="{% url 'chronam_page_ocr_txt' title.lccn issue.date_issued issue.edition page.sequence %}" />
-    <link rel="canonical" href="http://{{host}}{% url 'chronam_page' title.lccn issue.date_issued issue.edition page.sequence %}" />
+    <link rel="canonical" href="https://{{host}}{% url 'chronam_page' title.lccn issue.date_issued issue.edition page.sequence %}" />
     <link rel="up" href="{{ issue.url }}" />
     <link rel="up" href="{{ issue.batch.url }}" />
     {% if page.reel.number %}<link rel="up" href="{% url 'chronam_reel' page.reel.number %}" />{% endif %}
@@ -190,7 +190,7 @@
 
       <div class="item-foot">
         <ul class="plain">
-          <li><i>{{title.display_name}}</i> ({{title.place_of_publication}}), {{issue.date_issued|date:"d N Y"}}. <i>Chronicling America: Historic American Newspapers</i>. Lib. of Congress.  &lt;<a href="{% url 'chronam_page' title.lccn issue.date_issued issue.edition page.sequence %}">http://{{host}}{% url 'chronam_page' title.lccn issue.date_issued issue.edition page.sequence %}</a>&gt;</li>
+          <li><i>{{title.display_name}}</i> ({{title.place_of_publication}}), {{issue.date_issued|date:"d N Y"}}. <i>Chronicling America: Historic American Newspapers</i>. Lib. of Congress.  &lt;<a href="{% url 'chronam_page' title.lccn issue.date_issued issue.edition page.sequence %}">https://{{host}}{% url 'chronam_page' title.lccn issue.date_issued issue.edition page.sequence %}</a>&gt;</li>
           {% if page.on_flickr %}
           <li><strong>Flickr Link</strong> <a href="{{ page.first_flickr_url }}">{{ page.first_flickr_url }}</a></li>
           {% endif %}
