--- a/loc/templates/page_text.html
+++ b/loc/templates/page_text.html
@@ -24,7 +24,7 @@
     <br>
     <h1>{{page}}</h1>
     <h3>Image and text provided by {{issue.batch.awardee.name}}</h3>
-    <h3>Persistent link: <a href="{{page.url}}">http://{{host}}{{page.url}}</a></h3>
+    <h3>Persistent link: <a href="{{page.url}}">https://{{host}}{{page.url}}</a></h3>
     </div>
 
     <h2><a href="{% url 'chronam_ocr' %}">What is OCR?</a></h2>
