--- a/core/templates/includes/footer.html
+++ b/core/templates/includes/footer.html
@@ -7,12 +7,12 @@
         <div class="find_us">
             <h4>Find us on</h4>
 
-            <a href="http://www.facebook.com/libraryofcongress"><img src="{% static 'img-foot/facebook.gif' %}" alt="Facebook" width="16" height="16" /></a><a href="http://twitter.com/librarycongress"><img src="{% static 'img-foot/twitter.gif' %}" alt="Twitter" width="16" height="16" /></a><a href="http://www.youtube.com/libraryofcongress"><img src="{% static 'img-foot/youtube.gif' %}" alt="YouTube" width="16" height="16" /></a><a href="http://www.flickr.com/photos/library_of_congress/"><img src="{% static 'img-foot/flickr.gif' %}" alt="Flickr" width="16" height="16" /></a>
+            <a href="https://www.facebook.com/libraryofcongress"><img src="{% static 'img-foot/facebook.gif' %}" alt="Facebook" width="16" height="16" /></a><a href="https://twitter.com/librarycongress"><img src="{% static 'img-foot/twitter.gif' %}" alt="Twitter" width="16" height="16" /></a><a href="https://www.youtube.com/libraryofcongress"><img src="{% static 'img-foot/youtube.gif' %}" alt="YouTube" width="16" height="16" /></a><a href="https://www.flickr.com/photos/library_of_congress/"><img src="{% static 'img-foot/flickr.gif' %}" alt="Flickr" width="16" height="16" /></a>
         </div>
         <div class="subscribe">
             <h4>Subscribe &amp; Comment</h4>
             <span><a href="https://www.loc.gov/rss/">RSS &amp; E-Mail</a></span>
-            <span><a href="http://blogs.loc.gov/loc/">Blogs</a></span>
+            <span><a href="https://blogs.loc.gov/loc/">Blogs</a></span>
         </div>
 
         <div class="download">
@@ -24,7 +24,7 @@
 
     </div><!-- end class:f_inner_mid -->
     <div class="f_inner_bot">
-        <div class="sitelinks"><a href="https://www.loc.gov/about/">About</a>&nbsp;|&nbsp;<a href="https://www.loc.gov/pressroom/">Press</a>&nbsp;|&nbsp;<a href="https://www.loc.gov/about/sitemap/">Site Map</a>&nbsp;|&nbsp;<a href="https://www.loc.gov/help/contact-general.html">Contact</a>&nbsp;|&nbsp;<a href="https://www.loc.gov/access/">Accessibility</a>&nbsp;|&nbsp;<a href="https://www.loc.gov/homepage/disclaim.html">Legal</a>&nbsp;|&nbsp;<a href="https://www.loc.gov/global/disclaim.html">External Link Disclaimer</a>&nbsp;|&nbsp;<a href="http://www.usa.gov/">USA.gov</a></div>
+        <div class="sitelinks"><a href="https://www.loc.gov/about/">About</a>&nbsp;|&nbsp;<a href="https://www.loc.gov/pressroom/">Press</a>&nbsp;|&nbsp;<a href="https://www.loc.gov/about/sitemap/">Site Map</a>&nbsp;|&nbsp;<a href="https://www.loc.gov/help/contact-general.html">Contact</a>&nbsp;|&nbsp;<a href="https://www.loc.gov/access/">Accessibility</a>&nbsp;|&nbsp;<a href="https://www.loc.gov/homepage/disclaim.html">Legal</a>&nbsp;|&nbsp;<a href="https://www.loc.gov/global/disclaim.html">External Link Disclaimer</a>&nbsp;|&nbsp;<a href="https://www.usa.gov/">USA.gov</a></div>
         <div class="speech"><a href="https://www.loc.gov/access/web.html">Speech Enabled</a></div>
     </div><!-- end class:f_inner_bot -->
 </div><!-- end class:f_container -->
