--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -38,7 +38,7 @@
   <li>National Endowment for the Humanities - <a href="https://www.neh.gov/index.html" shape="rect">https://www.neh.gov/index.html</a></li>
   <li>Newspaper and Periodicals Reading Room (Serial and Government Publication Division), Library of Congress - <a href="https://www.loc.gov/rr/news/" shape="rect">https://www.loc.gov/rr/news/</a></li>
   <li>Collections with Newspapers at the Library of Congress - <a href="https://www.loc.gov/newspapers/collections/?st=gallery&sb=title_s" shape="rect">https://www.loc.gov/newspapers/collections/?st=gallery&sb=title_s</a></li>
-  <li>List of Awardee Institutions and Web sites <a href="http://loc.gov/ndnp/listawardees.html" shape="rect">http://loc.gov/ndnp/listawardees.html</a></li>
+  <li>List of Awardee Institutions and Web sites <a href="https://www.loc.gov/ndnp/listawardees.html" shape="rect">https://www.loc.gov/ndnp/listawardees.html</a></li>
   </ul>
   <h3><a id="rights_and_reproductions" shape="rect">Rights and Reproductions</a></h3>
   <p>The Library of Congress believes that the newspapers in Chronicling America are in the public domain or have no known copyright restrictions.  Newspapers published in the United States prior to 1923 are in the public domain in their entirety. Any newspapers in Chronicling America that were published after 1922 are also believed to be in the public domain, but may contain some copyrighted third party materials. Researchers using post-1922 newspapers should be alert for modern content (for example, registered and renewed for copyright and published with notice) that may be copyrighted.  Responsibility for making an independent legal assessment of an item and securing any necessary permissions ultimately rests with persons desiring to use the item.</p>
