--- a/core/templates/about_api.html
+++ b/core/templates/about_api.html
@@ -309,16 +309,16 @@ linking to related data available on other sites.  These additional
 vocabularies and external sites include:</p>
 <ul>
 <li><a class="external" href="http://dbpedia.org/">DBpedia</a></li>
-<li><a class="external" href="http://purl.org/dc/elements/1.1/">Dublin Core</a> and
+<li><a class="external" href="https://purl.org/dc/elements/1.1/">Dublin Core</a> and
 <a class="external" href="http://dublincore.org/documents/dcmi-terms/">DCMI Terms</a></li>
 <li><a class="external" href="http://purl.org/vocab/frbr/core#">FRBR concepts in RDF</a></li>
 <li><a class="external" href="http://sws.geonames.org/">GeoNames</a></li>
-<li><a href="http://lccn.loc.gov/">LCCN Permalink</a></li>
+<li><a href="https://lccn.loc.gov/">LCCN Permalink</a></li>
 <li><a class="external" href="http://www.lingvoj.org/">lingvoj.org</a></li>
 <li><a class="external" href="http://www.openarchives.org/ore/">OAI-ORE</a> (more about aggregations below)</li>
-<li><a class="external" href="http://www.w3.org/2002/07/owl#">OWL</a></li>
+<li><a class="external" href="https://www.w3.org/2002/07/owl#">OWL</a></li>
 <li><a class="external" href="http://metadataregistry.org/schema/show/id/1.html">RDA</a></li>
-<li><a class="external" href="http://www.worldcat.org/">WorldCat</a></li>
+<li><a class="external" href="https://www.worldcat.org/">WorldCat</a></li>
 </ul>
 <p>We are grateful to all of these providers and we hope we can follow
 their lead in encouraging additional connections between data and
@@ -346,7 +346,7 @@ bulk access to the underlying data sets. The initial bulk data sets include:
     <a href="{% url 'chronam_batches_atom' %}">Atom</a> and
     <a href="{% url 'chronam_batches_json' %}">JSON</a> views. These views provide
     links to where the files comprising the batch can be fetched with a web
-    crawling tool like <a href="http://www.gnu.org/software/wget/">wget</a>.</li>
+    crawling tool like <a href="https://www.gnu.org/software/wget/">wget</a>.</li>
     <li>OCR Bulk Data: the complete set of OCR XML and text files that make up
     the newspaper collection are made available as compressed archive files.
     These files are listed in the <a href="{% url 'chronam_ocr' %}">OCR</a>
@@ -365,8 +365,8 @@ Please note: Some batches contain digitized newspaper pages that lack correspond
 <p>
 To help you integrate Chronicling America into your JavaScript applications,
 the OpenSearch and AutoSuggest JSON responses support both
-<a href="http://www.w3.org/TR/cors/">Cross-Origin Resource Sharing (CORS)</a>
-and <a href="http://en.wikipedia.org/wiki/JSONP">JSON with Padding (JSONP)</a>.
+<a href="https://www.w3.org/TR/cors/">Cross-Origin Resource Sharing (CORS)</a>
+and <a href="https://en.wikipedia.org/wiki/JSONP">JSON with Padding (JSONP)</a>.
 CORS and JSONP allow your JavaScript applications to talk to services
 hosted at chroniclingamerica.loc.gov without the need to proxy the requests
 yourself.
