--- a/example/templates/site.html
+++ b/example/templates/site.html
@@ -62,10 +62,7 @@
 	background: rgba(255, 0, 0, 0.4);
     }
     </style>
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->{% endblock head_content %}
+    {% endblock head_content %}
   </head>
   <body>{% block body_content %}
     <div class="navbar navbar-inverse navbar-fixed-top">
