Fix iTunes U link in the future

--- a/core/templates/includes/footer.html
+++ b/core/templates/includes/footer.html
@@ -19,7 +19,7 @@
             <h4>Download &amp; Play</h4>
             <span><a href="https://www.loc.gov/podcasts/">Podcasts</a></span>
             <span><a href="https://www.loc.gov/webcasts/">Webcasts</a></span>
-            <span class="external"><a href="http://deimos3.apple.com/WebObjects/Core.woa/Browse/loc.gov">iTunes U</a></span>
+            <span class="external"><a href="http://itunes.apple.com/us/institution/library-of-congress/id386017159">iTunes U</a></span>
         </div>
 
     </div><!-- end class:f_inner_mid -->
